Fixed misalignment of time cells in main dashboard

--- a/src/components/MainDashboard/MainDashboardTable/TimeCell/TimeCell.scss
+++ b/src/components/MainDashboard/MainDashboardTable/TimeCell/TimeCell.scss
@@ -4,7 +4,7 @@
     width: $sizing-7;
     margin-right: $sizing-5;
     margin-left: $sizing-5;
-    margin-top: 42px;
+    margin-top: 55px;
 }
 
 .time-cell {
